# cg-devx-core

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  QUICKSTART.md  README.md  WORKLOADS.md  templating.md
.github/: release.yml  sync.yml
.github/workflows/: pre_release.yml  publish.yaml  release.yml  sync.yml
cli/: .flake8  .gitignore  README.md  __main__.py  build.py  pyproject.toml  requirements.txt
cli/commands/: destroy.py  setup.py
cli/commands/workload/: bootstrap.py
cli/common/: command_utils.py  singleton_metaclass.py  state_store.py
cli/common/const/: common_path.py  const.py  namespaces.py  parameter_names.py
cli/common/enums/: cloud_providers.py  dns_registrars.py  git_providers.py
cli/common/utils/: generators.py  os_utils.py
cli/services/: dependency_manager.py  kctl_wrapper.py  template_manager.py  tf_wrapper.py
cli/services/cloud/: cloud_provider_manager.py
cli/services/cloud/aws/: aws_manager.py  aws_sdk.py  aws_session_manager.py
cli/services/cloud/azure/: azure_manager.py  blob_storage.py
cli/services/dns/: dns_provider_manager.py
cli/services/dns/route53/: route53.py
cli/services/k8s/: config_builder.py  delivery_service_manager.py  k8s.py  kctl_wrapper.py  kubeconfig.yaml
cli/services/keys/: key_manager.py
cli/services/vcs/: git_provider_manager.py  template_manager.py
cli/services/vcs/github/: github_manager.py
cli/services/vcs/gitlab/: gitlab_manager.py
cli/tests/: parameters.yaml
cmd/: README.md  main.py  requirements.txt
cmd/commands/: destroy.py  setup.py
cmd/common/: state_store.py
cmd/services/: dependency_manager.py
cmd/tests/: parameters.yaml
platform/: README.md  TAGGING_STRATEGY.md  TEMPLATING.md  atlantis.yaml  tpl_README.md
platform/gitops-pipelines/: README.md  atlantis.yaml
platform/terraform/: .gitignore  .tflint.hcl  (+4 more)
tools/: .gitignore  README.md  pyproject.toml
tools/cli/: __main__.py  build.py
tools/cli/commands/: README.md  destroy.py  setup.py
tools/cli/commands/workload/: README.md  bootstrap.py  create.py  delete.py
tools/cli/common/: command_utils.py  custom_excpetions.py  logging_config.py  retry_decorator.py  state_store.py  tracing_decorator.py
tools/cli/common/const/: common_path.py  const.py  namespaces.py  parameter_names.py
tools/cli/common/enums/: cloud_providers.py  dns_registrars.py  gcp_resource_types.py  git_plans.py  git_providers.py  optional_services.py
tools/cli/common/utils/: command_utils.py  generators.py  k8s_utils.py  optional_services_manager.py
tools/cli/services/: README.md  dependency_manager.py  platform_gitops.py  platform_template_manager.py  template_manager.py  tf_wrapper.py  wl_gitops_template_manager.py  wl_manager.py  wl_template_manager.py
tools/cli/services/cloud/: cloud_provider_manager.py
tools/cli/services/cloud/aws/: aws_manager.py  aws_sdk.py  aws_session_manager.py  iam_permissions.py
tools/cli/services/cloud/azure/: azure_manager.py  azure_sdk.py  iam_permissions.py
tools/cli/services/cloud/gcp/: gcp_manager.py  gcp_sdk.py  iam_permissions.py
tools/cli/services/dns/: dns_provider_manager.py
tools/cli/services/dns/azure_dns/: azure_dns.py
tools/cli/services/dns/gcp_dns/: gcp_dns.py
tools/cli/services/dns/route53/: route53.py
tools/cli/services/k8s/: config_builder.py  delivery_service_manager.py  k8s.py  kctl_wrapper.py  kubeconfig.yaml
tools/cli/services/keys/: key_manager.py
tools/cli/services/vcs/: git_provider_manager.py
tools/cli/services/vcs/github/: github_manager.py
tools/cli/services/vcs/gitlab/: gitlab_manager.py
tools/tests/: parameters.yaml
(+485 files in other folders)
