[tool.poetry]
name = "cg-devx-core"
version = "0.1.0"
description = ""
authors = ["Alexander Ulyanov <alexu@cloudgeometry.io>", "Mikhail Turetskii <mturetsky@cloudgeometry.io>"]
readme = "README.md"
packages = [{include = "../cli"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "8.1.7"
cloup = "3.0.2"
configparser = "6.0.0"
pyyaml = "6.0.1"
flake8 = "6.1.0"
flake8-class-attributes-order = "0.1.3"
flake8-docstrings = "1.7.0"
pydocstyle = "6.3.0"
kubernetes = "27.2.0"
boto3 = "1.28.44"
azure-identity = "1.14.0"
azure-storage-blob = "12.17.0"
azure-mgmt-resource = "23.0.1"
gcloud = "0.18.3"
gitpython = "3.1.32"
dnspython = "2.4.2"
httpx = "0.25.0"
python-terraform = "0.10.1"
azure-mgmt-authorization = "^4.0.0"
azure-mgmt-dns = "^8.1.0"
ghrepo = "0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

