[tool.poetry]
name = "cg-devx-core"
version = "0.2.2"
description = ""
authors = ["Alexander Ulyanov <alexu@cloudgeometry.io>", "Mikhail Turetskii <mturetsky@cloudgeometry.io>"]
readme = "README.md"
packages = [{ include = "cli" }]

[tool.poetry.scripts]
cgdevxcli = "cli.__main__:entry_point"
build = "cli.build:install"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
click = "8.1.7"
cloup = "3.0.2"
PyInstaller = "5.13.2"
awscli = "1.29.56"
boto3 = "1.28.56"
configparser = "6.0.0"
pyyaml = "6.0.1"
kubernetes = "27.2.0"
azure-identity = "1.14.0"
azure-storage-blob = "12.17.0"
azure-mgmt-resource = "23.0.1"
azure-mgmt-authorization = "^4.0.0"
azure-mgmt-dns = "^8.1.0"
azure-mgmt-privatedns = "^1.1.0"
azure-mgmt-containerservice = "^26.0.0"
azure-mgmt-storage = "^21.1.0"
azure-mgmt-subscription = "^3.1.1"
azure-mgmt-compute = "^30.5.0"
gcloud = "0.18.3"
gitpython = "3.1.32"
ghrepo = "0.7.0"
dnspython = "2.4.2"
httpx = "0.25.0"
hvac = "1.2.1"
portforward = "^0.6.0"
alive-progress = "^3.1.5"

[tool.poetry.dev-dependencies]
flake8 = "6.1.0"
flake8-class-attributes-order = "0.1.3"
flake8-docstrings = "1.7.0"
pydocstyle = "6.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
